# YourCraft

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  TODO  settings.json
fonts/: README
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: block.frag  block.vert  cursor.frag  cursor.vert  text.frag  text.vert
src/: block.cpp  block.h  border.cpp  border.h  collision.cpp  collision.h  color.cpp  color.h  cursor.cpp  cursor.h  gamecontext.cpp  gamecontext.h  player.cpp  player.h  setting.cpp  setting.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h
textures/: README
